# quiz-backend

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  My aws - Sheet3 (1).csv  check_db.py  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py
alembic/: env.py
alembic/versions/: 85f1bcf19ddd_init_schema.py  a254d74cb39c_init_schema.py  a2be5cefc538_update_question_id_autoincrement.py  b6b6f926d575_update_responses_table_schema.py  bfcb0e742b83_add_question_set_field_to_questions_.py  cfd5ca7cd517_rename_result_to_responses.py
app/: main.py
app/api/dependencies/: auth.py
app/api/v1/: auth.py  question.py  response.py  (+1 more)
app/db/: base.py  session.py  test_connection.py
app/models/: __init__.py  answers.py  questions.py  responses.py  users.py
app/repository/: auth_repo.py  question_repo.py  response_repo.py  user_repo.py
app/schemas/: auth.py  question.py  response.py  user.py
app/services/: auth_service.py  question_service.py  response_service.py  user_service.py
app/utils/: security.py
data/: csv_to_yaml_import.py  questions_template.yaml  split_csv.py
data/CSV/: DVA-C02 Day1.csv  DVA-C02 Day10.csv  DVA-C02 Day11.csv  DVA-C02 Day12.csv  DVA-C02 Day13.csv  DVA-C02 Day14.csv  DVA-C02 Day15.csv  DVA-C02 Day2.csv  DVA-C02 Day3.csv  DVA-C02 Day4.csv  DVA-C02 Day5.csv  DVA-C02 Day6.csv  DVA-C02 Day7.csv  DVA-C02 Day8.csv  DVA-C02 Day9.csv  Data.csv  Question_data1.csv  README.md  process_and_import.py
data/docs/: CSV_IMPORT_GUIDE.md  DOCKER_GUIDE.md  IMPORT_QUESTIONS.md  README.md
tests/: test_dashboard.py
(+6 files in other folders)
